--- a/views/subscriptions/handleInvalidSubscriptions.ejs
+++ b/views/subscriptions/handleInvalidSubscriptions.ejs
@@ -40,7 +40,7 @@
         <div class="container-fluid page-body-wrapper">
             <%- include('../partials/sidebar.ejs' , {user}); %>
             <div class="main-panel">
-                <div class="content-wrapper">
+                <div class="content-wrapper home-tab">
                     <div class="row">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
