--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -36,7 +36,7 @@
             <%- include('../partials/sidebar.ejs' , {user}); %>
             <!-- partial -->
             <div class="main-panel">
-                <div class="content-wrapper">
+                <div class="content-wrapper home-tab">
                     <% if(customer) { %>
                     <div class="row text-left">
                         <div class="col-lg-12 d-flex flex-column">
@@ -55,13 +55,13 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-start">
                                                     <a href="/changePassword/<%- customer.id%>?url=/editCustomers&userType=<%- userType%>"
-                                                        type="button" class="btn btn-primary btn-icon-text m-1">
+                                                        type="button" class="btn btn-primary btn-icon-text m-1 text-white">
                                                         <i class="fa-solid fa-key"></i>
                                                         <%= lingua.user.password.changePassword%>
                                                     </a>
                                                     <a href="/edit-user/<%- customer.id%>?url=/editCustomers&userType=<%- userType%>"
                                                         data-id="user" type="button"
-                                                        class="btn btn-primary btn-icon-text m-1">
+                                                        class="btn btn-primary btn-icon-text m-1 text-white">
                                                         <i class="fa-solid fa-user-pen"></i>
                                                         <%= lingua.user.editPersonalInfo%>
                                                     </a>
