Bug fixes on create location.

--- a/views/location/create.ejs
+++ b/views/location/create.ejs
@@ -87,10 +87,10 @@
                                                             </select>
                                                         </div>
                                                         <div class="form-group">
-                                                            <label class="required" for="agentID"><%= lingua.agentID%></label>
+                                                            <label class="" for="agentID"><%= lingua.agentID%></label>
                                                             <input autocomplete="off"
                                                                 type="text" id="agentID" name="agentID"
-                                                                class="form-control form-control-lg" required />
+                                                                class="form-control form-control-lg" />
                                                         </div>
                                                     </div>
                                                 </div>
