--- a/views/location/edit.ejs
+++ b/views/location/edit.ejs
@@ -101,10 +101,10 @@
                                                         </div>
 
                                                         <div class="form-group">
-                                                            <label class="required" for="agentID"><%= lingua.agentID%></label>
+                                                            <label class="" for="agentID"><%= lingua.agentID%></label>
                                                             <input autocomplete="off" value="<%-location.agentID%>"
                                                                 type="text" id="agentID" name="agentID"
-                                                                class="form-control form-control-lg" required />
+                                                                class="form-control form-control-lg" />
                                                         </div>
                                                     </div>
                                                 </div>
