Fix reset password logo. And create user email.

--- a/views/auth/resetPasswordRequest.ejs
+++ b/views/auth/resetPasswordRequest.ejs
@@ -44,7 +44,7 @@
                                 <i class="fa-solid fa-arrow-left m-1 mb-0 mt-0"></i> Login
                             </a>
                             <div class="brand-logo text-center">
-                                <img src="/images/mrquicks-logo.png" alt="logo">
+                                <img src="/images/charlieBoy/CB-5.jpg" alt="logo" style="width: 25% !important;">
                             </div>
 
                             <h4>
