--- a/views/error.ejs
+++ b/views/error.ejs
@@ -67,7 +67,7 @@
             </div>
             <!-- content-wrapper ends -->
         </div>
-        <%- include('./partials/footer.ejs'); %>
+        <%# include('./partials/footer.ejs'); %>
 
         <!-- page-body-wrapper ends -->
     </div>
