--- a/views/error.ejs
+++ b/views/error.ejs
@@ -55,9 +55,9 @@
                                 <div class="row">
                                     <div class="col-lg-12">
 
-                                        <p>Message: <%- error.message%></p>
+                                        <p>Message: <%= error.message%></p>
                                         <br>
-                                        <p>Stack: <%- error.stack%></p>
+                                        <p>Stack: <%= error.stack%></p>
                                     </div>
                                 </div>
                             </div>
