--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -188,6 +188,7 @@
 
         // Add subscription
         $('#addSub').on('click', function (event) {
+            $(this).prop('disabled', true);
             // Clean plate input validator.
             document.getElementById("carPlate").setCustomValidity("");
             showResult('#plateValidationResult', ``);
@@ -244,6 +245,8 @@
                             clearForm(form);
                             showResult('#plateValidationResult', ``);
                         }
+
+                        $('#addSub').prop('disabled', false);
 
                     }).fail(function (err) {
                         console.log(err);
