Generalize and organize the password field. Remove password requirements. Change wording of Plate to License Plate. Remove DOB and City.

--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -33433,7 +33433,7 @@ div.tagsinput span.tag a {
     margin-top: 0;
     right: 0;
     left: auto;
-    top: 70px;
+    /* top: 50px; */
     padding-top: 0;
 }
 
