--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -69,31 +69,7 @@
                                     <div class="col-lg-6">
                                         <input type="hidden" value="<%= id%>" name="userId" />
                                         <input type="hidden" value="<%= token%>" name="token" />
-
-                                        <div class="form-group">
-                                            <label for="password"
-                                                class="required"><%= lingua.user.password.name%></label>
-
-                                            <input type="password" id="password" name="password" autocomplete="off"
-                                                class="form-control mb-3 form-control-lg"
-                                                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                                placeholder="Password" required />
-                                            <div id="message">
-                                                <p>
-                                                    <%= lingua.passwordRequirement%>
-                                                </p>
-                                                <p> <span id="letter" class="invalid"> <b>1
-                                                            <%= lingua.user.password.lowerCase%></b>
-                                                    </span>, <span id="capital" class="invalid"><b>1
-                                                            <%= lingua.user.password.upperCase%></b></span>, <span
-                                                        id="number" class="invalid"> <b>1
-                                                            <%= lingua.user.password.number%></b></span>,
-                                                    <span id="length" class="invalid"> <b>8
-                                                            <%= lingua.user.password.characters%></b></span>
-                                                </p>
-                                            </div>
-                                        </div>
+                                        <%- include('../user/passwordField.ejs'); %>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -126,7 +102,7 @@
     <script src="../../js/off-canvas.js"></script>
     <script src="../../js/hoverable-collapse.js"></script>
     <script src="../../js/template.js"></script>
-    <script src="../../js/register.js"></script>
+    <!-- <script src="../../js/register.js"></script> -->
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script src="../../js/dashboard.js"></script>
