--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -77,11 +77,11 @@
                 <div id="languageDropdown" class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0"
                     aria-labelledby="languageDropdown">
                     <a id="es-lang" href="?lang=es" class="dropdown-item py-3">
-                        ES <span class="flag-icon flag-icon-pr" style="margin-left: 5px;"></span>
+                        <span class="flag-icon flag-icon-pr" style="margin-right: 5px;"></span> ESPAÑOL
                     </a>
 
                     <a id="en-lang" href="?lang=en" class="dropdown-item py-3">
-                        EN <span class="flag-icon flag-icon-um" style="margin-left: 5px;"></span>
+                        <span class="flag-icon flag-icon-um" style="margin-right: 5px;"></span> ENGLISH
                     </a>
                 </div>
             </li>
