--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -54,30 +54,7 @@
                                                 <input type="text" id="id" name="id" value="<%- customer.id%>" hidden />
                                                 <div class="row">
                                                     <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <label for="password"
-                                                                class="required"><%= lingua.user.password.new%></label>
-
-                                                            <input value="" type="password" id="password"
-                                                                name="password"
-                                                                class="form-control mb-3 form-control-lg"
-                                                                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                                                placeholder="Password" required />
-                                                        </div>
-
-                                                        <div id="message">
-                                                            <p><%= lingua.user.password.passwordRequirement%>:</p>
-                                                            <p> <span id="letter" class="invalid"> <b>1
-                                                                        <%= lingua.user.password.lowerCase%></b>
-                                                                </span>, <span id="capital" class="invalid"><b>1
-                                                                        <%= lingua.user.password.upperCase%></b></span>,
-                                                                <span id="number" class="invalid"> <b>1
-                                                                        <%= lingua.user.password.number%></b></span>,
-                                                                <span id="length" class="invalid"> <b>8
-                                                                        <%= lingua.user.password.characters%></b></span>
-                                                            </p>
-                                                        </div>
+                                                        <%- include('../user/passwordField.ejs'); %>
                                                     </div>
                                                 </div>
                                                 <div class="row">
