--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -10,7 +10,7 @@
     </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../../vendors/feather/feather.css">
-    <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css">
+    <!-- <link rel="stylesheet" href="../../vendors/mdi/css/materialdesignicons.min.css"> -->
     <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="../../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../../vendors/simple-line-icons/css/simple-line-icons.css">
@@ -252,7 +252,10 @@
                         console.log(err);
                     })
                 }
-            }
+            } else
+                $('#addSub').prop('disabled', false);
+
+
         });
         // Remove subscription
         $('#cart-table tbody').on('click', '.remove', function () {
@@ -300,7 +303,7 @@
             t.row.add([
                 `<p> Brand: ${newItem.brand} </p> <br> 
                             <p> Model: ${newItem.model} </p> <br>
-                            <p> Plate: ${newItem.plate} </p>`,
+                            <p> License Plate: ${newItem.plate} </p>`,
                 newItem.product,
                 newItem.price,
                 `<td class="text-center">
