--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -61,30 +61,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <label for="password"
-                                                                class="required"><%= lingua.user.password.name%></label>
-
-                                                            <input autocomplete="off" type="password" id="password"
-                                                                name="password"
-                                                                class="form-control mb-3 form-control-lg"
-                                                                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                                                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                                                placeholder="<%= lingua.user.password.name%>"
-                                                                required />
-                                                            <div id="message">
-                                                                <p><%= lingua.user.password.passwordRequirement%>:</p>
-                                                                <p> <span id="letter" class="invalid"> <b>1
-                                                                            <%= lingua.user.password.lowerCase%></b>
-                                                                    </span>, <span id="capital" class="invalid"><b>1
-                                                                            <%= lingua.user.password.upperCase%></b></span>,
-                                                                    <span id="number" class="invalid"> <b>1
-                                                                            <%= lingua.user.password.number%></b></span>,
-                                                                    <span id="length" class="invalid"> <b>8
-                                                                            <%= lingua.user.password.characters%></b></span>
-                                                                </p>
-                                                            </div>
-                                                        </div>
+                                                        <%- include('./passwordField.ejs'); %>
                                                     </div>
                                                     <div class="col-lg-6">
 
@@ -119,7 +96,7 @@
                                                                 placeholder="XXX-XXX-XXXX" required autofocus />
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-6">
+                                                    <!-- <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="dateOfBirth"
                                                                 class="required"><%= lingua.user.dateOfBirth%></label>
@@ -129,7 +106,7 @@
                                                                 class="form-control mb-3 form-control-lg" required
                                                                 autofocus />
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label class="required"
@@ -143,7 +120,7 @@
                                                             </select>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-6">
+                                                    <!-- <div class="col-lg-6">
                                                         <div class="form-group">
                                                             <label for="city"
                                                                 class="required"><%= lingua.user.city%></label>
@@ -157,7 +134,7 @@
                                                                 <% } %>
                                                             </select>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                                 <div class="row">
                                                     <div class="mt-3">
